# flowstate

./: .gitignore  .mise.toml  ARCHITECTURE_AUDIT.md  CLAUDE.md  Cargo.toml  README.md  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.claude/rules/: react-guidelines.mdc
.github/workflows/: build.yml  ci.yml  publish-npm.yml
apps/: README.md
apps/flowstate/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
apps/flowstate-npm/: .npmignore  README.md  package.json
apps/flowstate/src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/flowstate/src-tauri/capabilities/: default.json
apps/flowstate/src-tauri/icons/: icon.icns
apps/flowstate/src-tauri/src/: code.rs  daemon_client.rs  daemon_supervisor.rs  editor.rs  fatal.rs  file_index.rs  install_cli.rs  lib.rs  lock.rs  loopback_http.rs  main.rs  orchestration_adapters.rs  orphan_scan.rs  pty.rs  shell_env.rs  tracing_setup.rs  usage.rs  user_config.rs
apps/flowstate/src-tauri/src/git/: branch.rs  diff.rs  diff_stream.rs  mod.rs  worktree.rs
apps/zenui/: README.md
apps/zenui/main-application/: Cargo.toml  README.md
apps/zenui/main-application/src/: main.rs  server_entry.rs
crates/: README.md
crates/app-layer/: Cargo.toml
crates/app-layer/src/: caffeinate.rs  daemon_main.rs  git_worktree.rs  http.rs  lib.rs  orchestration_adapters.rs  provision.rs  usage.rs  user_config.rs
crates/app-layer/src/kanban/: agents.rs  http.rs  merge.rs  mod.rs  model.rs  prompts.rs  service.rs  store.rs  tick.rs
crates/app-shell/: Cargo.toml
crates/app-shell/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: README.md
crates/core/checkpoints/: Cargo.toml
crates/core/checkpoints/src/: blob_store.rs  errors.rs  lib.rs  manifest.rs  noop_tests.rs  store.rs  walker.rs
crates/core/checkpoints/tests/: fs_store.rs
crates/core/embedded-node/: Cargo.toml  build.rs
crates/core/embedded-node/src/: download.rs  lib.rs  node_checksums.rs
crates/core/mcp-server/: Cargo.toml
crates/core/mcp-server/src/: lib.rs
crates/core/persistence/: CLAUDE.md  Cargo.toml  README.md
crates/core/persistence/src/: codecs.rs  lib.rs
crates/core/provider-api/: Cargo.toml  README.md
crates/core/provider-api/src/: adapter.rs  binary_resolver.rs  capabilities.rs  events.rs  helpers.rs  lib.rs  mcp_config.rs  messages.rs  orchestration.rs  orchestration_ipc.rs  probe.rs  process_cache.rs  process_group.rs  skills_disk.rs  types.rs  user_mcp.rs  windows_console.rs
crates/core/provider-api/tests/: ts_bindings.rs
crates/core/provider-claude-sdk/: .taurignore  Cargo.toml  README.md  build.rs
crates/core/provider-claude-sdk/bridge/: package-lock.json  package.json  pnpm-lock.yaml
crates/core/provider-claude-sdk/bridge/src/: index.ts
crates/core/provider-claude-sdk/src/: bridge_runtime.rs  config.rs  lib.rs  process.rs  rpc.rs  stream.rs  wire.rs
crates/core/provider-claude-sdk/tests/: wire_roundtrip.rs
crates/core/provider-github-copilot/: Cargo.toml  README.md  build.rs
crates/core/provider-github-copilot-cli/: Cargo.toml  README.md
crates/core/provider-github-copilot-cli/src/: config.rs  lib.rs  process.rs  rpc.rs
crates/core/provider-github-copilot-cli/tests/: wire_roundtrip.rs
crates/core/provider-github-copilot/bridge/: package-lock.json  package.json  pnpm-lock.yaml
crates/core/provider-github-copilot/bridge/src/: index.ts
crates/core/provider-github-copilot/src/: bridge_runtime.rs  config.rs  lib.rs  process.rs  wire.rs
crates/core/provider-github-copilot/tests/: wire_roundtrip.rs
crates/core/provider-opencode/: CLAUDE.md  Cargo.toml  PROTOCOL.md  README.md  build.rs
crates/core/provider-opencode/src/: events.rs  http.rs  lib.rs  server.rs  spec.rs
crates/core/provider-opencode/tests/: live_opencode.rs
crates/core/provider-opencode/tests/fixtures/: openapi-1.14.41.json
crates/core/runtime-core/: Cargo.toml  README.md
crates/core/runtime-core/src/: cron.rs  internals.rs  lib.rs  orchestration.rs  session_events.rs  session_ops.rs  transport.rs  wakeup.rs
crates/core/runtime-core/tests/: checkpoint_integration.rs
crates/daemon-bin/: Cargo.toml
crates/daemon-bin/src/: main.rs
crates/daemon-core/: Cargo.toml
crates/daemon-core/src/: lib.rs  lifecycle.rs  shutdown.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: lib.rs
crates/middleman/: README.md
crates/middleman/daemon-core/: Cargo.toml  README.md
crates/middleman/daemon-core/src/: config.rs  lib.rs  lifecycle.rs  ready_file.rs  shutdown.rs  transport.rs
crates/middleman/transport-http/: Cargo.toml  README.md  build.rs
crates/middleman/transport-http/src/: lib.rs
crates/middleman/transport-tauri/: Cargo.toml
crates/middleman/transport-tauri/src/: commands.rs  lib.rs
crates/orchestration/: Cargo.toml
crates/persistence/: Cargo.toml
crates/provider-api/: Cargo.toml
crates/provider-claude-bridge/: Cargo.toml
crates/provider-claude-cli/: Cargo.toml
crates/provider-claude-sdk/: build.rs
crates/provider-github-copilot/: Cargo.toml  build.rs
crates/tao-web-shell/: Cargo.toml  build.rs
crates/tao-web-shell/src/: main.rs
docs/screenshots/: README.md
frontend/: .gitignore  index.html  package.json  playwright-smoke.mjs  vite.config.ts
frontend/src/: App.tsx  chat-scroll.ts  index.css  main.tsx  styles.css  types.ts
frontend/tests/: smoke-console.mjs
scripts/: smoke-daemon.sh
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.zenui/: zenui.db-shm  zenui.db-wal
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: daemon_proxy.rs  lib.rs  main.rs  pty.rs  server_entry.rs  shell_env.rs  user_config.rs
src/components/: app-sidebar.tsx  new-thread-page.tsx
src/hooks/: use-mobile.ts  use-provider-enabled.tsx  use-theme.tsx  use-toast.ts
src/lib/: api.ts  defaults-settings.ts  get-daemon-url.ts  git-diff-stream.ts  mode-cycling.ts  pierre-diffs-worker.ts  queries.ts  types.ts  (+2 more)
(+338 files in other folders)
