[workspace]
members = [
  "crates/app-shell",
  "crates/runtime-core",
  "crates/provider-api",
  "crates/provider-codex",
  "crates/provider-claude-bridge",
  "crates/provider-github-copilot",
  "crates/orchestration",
  "crates/persistence",
  "crates/http-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["ws"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.35.0"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
wry = "0.55.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tower-http = { version = "0.6.6", features = ["fs"] }
