[workspace]
members = [
  "apps/zenui/main-application",
  "apps/zenui/crate/server",
  "crates/core/runtime-core",
  "crates/core/provider-api",
  "crates/core/orchestration",
  "crates/core/persistence",
  "crates/core/provider-claude-sdk",
  "crates/core/provider-claude-cli",
  "crates/core/provider-codex",
  "crates/core/provider-github-copilot",
  "crates/core/provider-github-copilot-cli",
  "crates/middleman/http-api",
  "crates/middleman/daemon-core",
  "crates/middleman/daemon-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["ws"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
directories = "5"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.35.0"
tempfile = "3"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
wry = "0.55.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tower-http = { version = "0.6.6", features = ["fs"] }
