[workspace]
members = [
  "apps/flowstate/src-tauri",
  "crates/app-layer",
  "crates/cli",
  "crates/core/runtime-core",
  "crates/core/provider-api",
  "crates/core/persistence",
  "crates/core/checkpoints",
  "crates/core/embedded-node",
  "crates/core/provider-claude-sdk",
  "crates/core/provider-claude-cli",
  "crates/core/provider-codex",
  "crates/core/provider-github-copilot",
  "crates/core/provider-github-copilot-cli",
  "crates/core/provider-opencode",
  "crates/core/mcp-server",
  "crates/middleman/transport-http",
  "crates/middleman/daemon-core",
  "crates/middleman/transport-tauri",
]
resolver = "2"

[workspace.package]
version = "0.2.28"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
axum = { version = "0.8.6", features = ["ws"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
directories = "5"
dirs = "5"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
