[package]
name = "flowzen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "flowzen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
dirs = "5"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false }

# Daemon client (connect or spawn)
zenui-daemon-client = { path = "../../rs-agent-sdk/crates/middleman/daemon-client" }

# Daemon core + HTTP transport (for server mode)
zenui-daemon-core = { path = "../../rs-agent-sdk/crates/middleman/daemon-core" }
zenui-transport-http = { path = "../../rs-agent-sdk/crates/middleman/transport-http" }

# Types
zenui-provider-api = { path = "../../rs-agent-sdk/crates/core/provider-api" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
