[package]
name = "flowzen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "flowzen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ripgrep's gitignore-aware walker — used by the /code editor view
# to list project files for the Cmd+P-style picker. Respects
# .gitignore automatically so we don't walk into node_modules/
# target/ etc.
ignore = "0.4"

# Daemon core + Tauri transport (embedded daemon)
zenui-daemon-core = { path = "../../rs-agent-sdk/crates/middleman/daemon-core" }
zenui-transport-tauri = { path = "../../rs-agent-sdk/crates/middleman/transport-tauri" }

# Types used in Tauri commands
zenui-provider-api = { path = "../../rs-agent-sdk/crates/core/provider-api" }
zenui-runtime-core = { path = "../../rs-agent-sdk/crates/core/runtime-core" }

# Async
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
