[package]
name = "flowstate-app-layer"
version.workspace = true
edition.workspace = true
publish = false

# Flowstate app-owned state that neither the core runtime SDK nor the
# provider adapters should care about: user-facing config, usage
# analytics, the concrete implementations of the runtime's
# `AppMetadataProvider` / `WorktreeProvisioner` traits, and the
# startup provisioning helper that extracts / downloads bundled
# runtimes before the Tauri shell bootstraps the daemon code.
#
# Keeps Tauri out of the dependency graph of anything that isn't
# strictly UI. Projects embedding flowstate's runtime headless (tests,
# CLIs) can depend on this crate without pulling the entire Tauri
# stack.
#
# The actual per-user databases (user_config.sqlite, usage.sqlite)
# live alongside the runtime's own SQLite under the Tauri-resolved
# app_data_dir. Callers inject the dir; this crate never resolves it.

[lib]
path = "src/lib.rs"

[features]
# Default: provider bridges and the Node.js runtime are downloaded on
# first launch.
default = []
# Opt-in: bake Node.js + every provider's bridge tree into the final
# binary via `include_bytes!` / `rust-embed`. Forwarded to each
# provider crate so their per-crate `embed` feature lights up.
# Consumed by the Tauri app's `embed-all` feature, which is the
# user-facing switch.
embed-all = [
    "zenui-provider-claude-sdk/embed",
    "zenui-provider-github-copilot/embed",
]

[dependencies]
# SDK surface for the orchestration adapter impls (ProjectMetadata,
# WorktreeSpec, trait definitions). Same crate the runtime uses, so
# the conversion here is zero-cost and type-checked.
zenui-provider-api = { path = "../core/provider-api" }
zenui-runtime-core = { path = "../core/runtime-core" }

# Serde for the analytics / config wire shapes. Tauri commands and
# HTTP handlers both serialize these; owning them here keeps the
# schemas in one place.
serde.workspace = true
serde_json.workspace = true

# Usage analytics needs timezone-aware timestamps for the bucketed
# timeseries. Default features are fine — we use the `clock` feature
# for `Utc::now()` and the `serde` integration for wire types.
chrono = { workspace = true }

# SQLite. Bundled feature builds libsqlite3 in-tree so we don't
# depend on whatever version ships with the host OS. Version matches
# what the rest of the workspace links (rusqlite 0.37 bundled) so
# libsqlite3-sys is shared across the dependency graph — cargo
# refuses two crates linking to the same native library at different
# versions, and it's easier to just pin.
rusqlite = { version = "0.37", features = ["bundled"] }

# The orchestration-adapter impls are `async_trait`-decorated so they
# can satisfy the runtime's `WorktreeProvisioner` trait.
async-trait.workspace = true

# The orchestration adapters offload blocking SQLite / `git worktree
# add` work onto `tokio::task::spawn_blocking` so the async runtime
# stays responsive even when rusqlite contends or git is slow.
tokio = { workspace = true }

# HTTP surface for the loopback REST handlers — same functions the
# `#[tauri::command]` wrappers delegate to, exposed as routes mounted
# on `HttpTransport::with_extra_router` so both surfaces share the
# same ephemeral loopback port.
axum = { workspace = true }

# Bundled Node.js + provider bridges that `provision_runtimes()`
# pre-warms at Tauri setup time. The two embed-feature-flagged SDK
# bridges both transitively depend on `zenui-embedded-node`, but the
# provision call site wants its own direct dep so ordering in the
# splash telemetry (Node first, then bridges) is explicit.
zenui-embedded-node = { path = "../core/embedded-node", default-features = false }
zenui-provider-claude-sdk = { path = "../core/provider-claude-sdk" }
zenui-provider-github-copilot = { path = "../core/provider-github-copilot" }

# Error handling for `provision_runtimes()` and the orchestration
# adapter impls.
anyhow.workspace = true

# Used by `tracing::info!` markers in provision telemetry + the
# orchestration adapters. The subscriber itself is initialised by
# the Tauri shell; this crate only emits.
tracing.workspace = true

# `SetThreadExecutionState` is the Windows analogue of macOS's
# `caffeinate` for the sleep-prevention controller in
# `caffeinate.rs`. Lives under `Win32_System_Power`; uses
# `Win32_Foundation` for the EXECUTION_STATE return type.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Power",
] }

[dev-dependencies]
# In-memory SQLite for unit tests (no temp files on disk).
tempfile.workspace = true
