[package]
name = "zenui-daemon-bin"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[[bin]]
name = "zenui-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
ureq = { version = "2", default-features = false }
zenui-daemon-core = { path = "../daemon-core" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
