[package]
name = "zenui-daemon-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zenui-http-api = { path = "../http-api" }
zenui-orchestration = { path = "../orchestration" }
zenui-persistence = { path = "../persistence" }
zenui-provider-api = { path = "../provider-api" }
zenui-provider-claude-cli = { path = "../provider-claude-cli" }
zenui-provider-claude-sdk = { path = "../provider-claude-sdk" }
zenui-provider-codex = { path = "../provider-codex" }
zenui-provider-github-copilot = { path = "../provider-github-copilot" }
zenui-provider-github-copilot-cli = { path = "../provider-github-copilot-cli" }
zenui-runtime-core = { path = "../runtime-core" }

[dev-dependencies]
tempfile.workspace = true
