[package]
name = "zenui-http-api"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
zenui-provider-api = { path = "../provider-api" }
zenui-runtime-core = { path = "../runtime-core" }
