[package]
name = "zenui-tao-web-shell"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "zenui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
muda = "0.13"
serde.workspace = true
serde_json.workspace = true
tao.workspace = true
wry.workspace = true
zenui-daemon-client = { path = "../daemon-client" }
